<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicyActivity"
    android:background="@color/white">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="350dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Privacy Policy"
        android:textColor="@color/black"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/effectiveDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Effective Date: 01-01-2025"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/quicksand_bold"/>

        <TextView
            android:id="@+id/privacyPolicyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicyText"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintTop_toBottomOf="@id/effectiveDateText"
            android:layout_marginTop="10dp"/>

        <View
            android:id="@+id/startBlackLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/privacyPolicyText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/startBlackLine"
            android:layout_marginTop="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/privacyPolicyText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Information We Collect"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText2"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText1"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. How We Use Your Information"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText2"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText4"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText3"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. How We Share Your Information"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText4"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText6"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText5"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Health Disclaimer"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText6"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText8"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText7"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. Your Privacy Rights"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText8"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText10"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText9"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6. Data Retention"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText10"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText12"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText11"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7. Children’s Privacy"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText12"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText14"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText13"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8. Third-Party Links"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText14"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText16"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText15"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="9. Changes to This Privacy Policy"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText16"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText19"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText17"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10. Contact Us"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText19"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/privacyPolicyText21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacyPolicyText21"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/quicksand_bold"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicyText20"
                    android:layout_marginTop="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <View
            android:id="@+id/endBlackLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="By using Dietica, you acknowledge that you have read, understood, and agreed to these Terms and Conditions."
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintTop_toBottomOf="@id/endBlackLine"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/agreeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="I Agree"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background_tnc_pp"
            app:layout_constraintTop_toBottomOf="@id/endText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>